--- a/u16p7.1/supervisord.conf
+++ b/u16p7.1/supervisord.conf
@@ -13,3 +13,14 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 username=www-data
 autorestart=true
+
+[program:php-fpm]
+command=php-fpm7.1 -R -F -c /etc/php/7.1/fpm/php-fpm.conf
+process_name=%(program_name)s_%(process_num)02d
+numprocs=1
+autostart=true
+autorestart=true
+startsecs=0
+redirect_stderr=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
